--- a/views/about.pug
+++ b/views/about.pug
@@ -8,7 +8,7 @@ block content
       .cell.small-6.medium-9.large-9
 
         //- Add your name.
-        h1 Name
+        h1 Luc de Brouwer
 
         //- Feel free personalize the title below
         p.lead.text-light
@@ -25,23 +25,26 @@ block content
 
         //- Replace the text in the li tags below with your own skills.  At this point, you should be able to list at least ten skills.
         ul
-          li Express
-          li Other cool stuff
-          li Listing my skills
-          li Etc.
-          li Etc. 
-          li Etc.
+          li Html
+          li Css       
+          li JavaScript
+          li Express.js
+          li Node.js
+          li jQuery
+          li Ajax
+          li MySQL
+          li PHP
+          li Laravel
+
         h6 Contact Info
 
-        //- Add your own contact info
         ul
-          li 555-555-1234
-          li email@email.com
+          li (+31) 0646213822
+          li lljdebrouwer@gmail.com
 
-        //- Add URLs to the hrefs below to link to your social media accounts.
-        a.button.expanded(href='') LinkedIn
-        a.button.expanded(href='') GitHub
-        a.button.expanded(href='') Twitter
+        a.button.expanded(href='https://www.linkedin.com/in/luc-de-brouwer-228674129/') LinkedIn
+        a.button.expanded(href='https://github.com/lucdebrouwer') GitHub
+        a.button.expanded(href='https://twitter.com/lucdb040') Twitter
   nav.grid-container.portfolio-breadcrumb
     a(href='/') ← Back
   
