--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,26 +14,22 @@ html(class="no-js" lang="en" dir="ltr")
         block sidebar
           br
           .cell.shrink
-            img.thumbnail(src='https://placehold.it/550x350')
+            img.thumbnail(src='/static/img/profile_picture.jpg')
           .cell.auto
 
-            //- Add your name here.
-            h5 Name
+            h5 Luc de Brouwer
 
-            //- Add text here to describe who you are, what you do, and why you are so aweome.
             p.text-light
-              | Descritption
+              | The possibilities with programming is endless - The scene is fun and challenging with technologies that never seem to stop to improve and grow. This makes it a place I love to work in. Meet Luc, I am an open minded Fullstack JavaScript developer that loves to write clean and well formatted code. In my free time I help other students at Treehouse on their programming journey by providing code reviews
 
-            //- Add about page route to the href below. 
-            a(href='') Learn More →
+            a(href='/about') Learn More →
 
     .off-canvas-content(data-off-canvas-content='')
       .title-bar.hide-for-large
         .title-bar-left
           button.menu-icon(type='button', data-toggle='my-info')
 
-          //- Add your name here.  This is for the mobile screen sized version.
-          span.title-bar-title Name
+          span.title-bar-title Luc de Brouwer
       block content
         
 
