Added error handlers

--- a/views/about.pug
+++ b/views/about.pug
@@ -17,16 +17,16 @@ block content
         //- Replace the boilerplate below with your Elevator pitch below.
         .portfolio-bio
           p
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position. 
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position.
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position.
+            | Luc de Brouwer is an 21-year-old open minded full stack JavaScript developer. He lives in Eindhoven which is in the South of The Netherlands. 
+            | He has a lot of passion for writing backend applications and here lies his strength. When Luc is not writing software, he is working in the hospitality industry.
+            | Knowing what service is and should look like is second nature thanks to his experience in the hospitality industry. Having this experience also drives him to help contribute to a safe learning environment, for anyone who wants to learn how to write code.
       .cell.portfolio-meta.small-6.medium-2.large-3
         h6 Skills
 
         //- Replace the text in the li tags below with your own skills.  At this point, you should be able to list at least ten skills.
         ul
-          li Html
-          li Css       
+          li HTML
+          li CSS       
           li JavaScript
           li Express.js
           li Node.js
@@ -35,6 +35,7 @@ block content
           li MySQL
           li PHP
           li Laravel
+          li Peer Reviews
 
         h6 Contact Info
 
