--- a/views/project.pug
+++ b/views/project.pug
@@ -20,8 +20,8 @@ block content
           each technology in technologies
             li #{technology}
 
-        a.button.expanded(href=`${live_link}`) Live Demo
-        a.button.expanded(href=`${github_link}`) GitHub Repo
+        a.button.expanded(href=`${live_link}` target='_blank') Live Demo
+        a.button.expanded(href=`${github_link}` target='_blank') GitHub Repo
     
        
     
