--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,10 @@ extends layout.pug
 block content 
   article.grid-container.portfolio-intro
     div
-      h1 Portfolio | Luc de Brouwer
+      h1
+        span Portfolio 
+        span.pipe | 
+        span Luc de Brouwer
       p.lead.text-light
         | Writing JavaScript is one of my favorite things to do. What started with watching videos about JavaScript eventually turned into creating projects with JavaScript. In my portfolio you will find unique JavaScript projects that are part of the fullstack JavaScript techdegree from Treehouse.
   article.grid-container.portfolio-index
