Ready for review

--- a/views/about.pug
+++ b/views/about.pug
@@ -7,23 +7,19 @@ block content
     .grid-x
       .cell.small-6.medium-9.large-9
 
-        //- Add your name.
         h1 Luc de Brouwer
 
-        //- Feel free personalize the title below
         p.lead.text-light
           | Full Stack JavaScript Developer.
 
-        //- Replace the boilerplate below with your Elevator pitch below.
         .portfolio-bio
           p
-            | Luc de Brouwer is an 21-year-old open minded full stack JavaScript developer. He lives in Eindhoven which is in the South of The Netherlands. 
+            | Luc de Brouwer is an 21-year-old open minded full stack JavaScript developer. He lives in Eindhoven which is a city in the South of The Netherlands. 
             | He has a lot of passion for writing backend applications and here lies his strength. When Luc is not writing software, he is working in the hospitality industry.
             | Knowing what service is and should look like is second nature thanks to his experience in the hospitality industry. Having this experience also drives him to help contribute to a safe learning environment, for anyone who wants to learn how to write code.
       .cell.portfolio-meta.small-6.medium-2.large-3
         h6 Skills
 
-        //- Replace the text in the li tags below with your own skills.  At this point, you should be able to list at least ten skills.
         ul
           li HTML
           li CSS
@@ -43,9 +39,9 @@ block content
           li (+31) 0646213822
           li lljdebrouwer@gmail.com
 
-        a.button.expanded(href='https://www.linkedin.com/in/luc-de-brouwer-228674129/') LinkedIn
-        a.button.expanded(href='https://github.com/lucdebrouwer') GitHub
-        a.button.expanded(href='https://twitter.com/lucdb040') Twitter
+        a.button.expanded(href='https://www.linkedin.com/in/luc-de-brouwer-228674129/' target="_blank") LinkedIn
+        a.button.expanded(href='https://github.com/lucdebrouwer' target="_blank") GitHub
+        a.button.expanded(href='https://twitter.com/lucdb040' target="_blank") Twitter
   nav.grid-container.portfolio-breadcrumb
     a(href='/') ← Back
   
